--- a/src/components/Services/Testimonials/Testimonials.css
+++ b/src/components/Services/Testimonials/Testimonials.css
@@ -217,7 +217,10 @@
 @media screen and (max-width: 800px) {
 
     .testimonials {
-        padding-top: 4rem;
+        padding-top: 3rem;
+    }
+    .testimonials > h1 {
+        font-size: 2.5rem;
     }
 
     .testContainer > img {
@@ -235,12 +238,17 @@
 }
 
 @media screen and (max-width: 600px) {
-
+    .testimonials {
+        padding-top: 1.8rem;
+    }
 }
 
 @media screen and (max-width: 400px) {
     .testimonials {
         height: 100%;
+    }
+    .testimonials > h1 {
+        font-size: 2rem;
     }
 }
   
@@ -248,6 +256,9 @@
   480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
     .testimonials {
         height: 100%;
+    }
+    .testimonials > h1 {
+        font-size: 2rem;
     }
 }
 
