--- a/src/components/Contacts/ContactsHeader/ContactsHeader.css
+++ b/src/components/Contacts/ContactsHeader/ContactsHeader.css
@@ -19,3 +19,41 @@
 .contactContainer {
     margin-top: 2rem !important;
 }
+
+
+@media (min-width: 992px) and (max-width: 1380px) {
+
+}
+
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 800px) {
+    .contactsHeader {
+        padding: 2rem;
+        padding-top: 4rem;
+    }
+    .contactsHeader > h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+}
+
+@media screen and (max-width: 400px) {
+
+}
+  
+@media only screen and (min-device-width: 320px) and (max-device-width: 
+  480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
+
+}
+
+
+@media only screen and (device-width: 768px) {
+
+}
