--- a/src/components/Home/CardTwo/CardTwo.css
+++ b/src/components/Home/CardTwo/CardTwo.css
@@ -1,7 +1,6 @@
 .cardTwo {
     height: 100vh;
     position: relative;
-    background-color: darkkhaki;
     overflow: hidden;
 }
 
@@ -12,17 +11,21 @@
     bottom: 15%;
     width: 600px;
     height: 400px;
-    background-color: black;
+    background-color: #330033;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: -4px 8px 34px -5px rgba(51,0,51,0.79);
+-webkit-box-shadow: -4px 8px 34px -5px rgba(51,0,51,0.79);
+-moz-box-shadow: -4px 8px 34px -5px rgba(51,0,51,0.79);
 }
 
 .cardTwoDiv > h1 {
     color: whitesmoke;
     margin: 2rem 4rem 2rem;
     font-size: 2.3rem;
+    font-family: 'Lato', sans-serif;
 }
 
 
@@ -30,6 +33,7 @@
     color: whitesmoke;
     margin: 1rem 4rem 2rem 4rem;
     font-size: 1.3rem;
+    font-family: 'Lato', sans-serif;
 }
 
 
@@ -44,6 +48,9 @@
     height: 650px;
     border-radius: 5px;
     pointer-events: none;
+    box-shadow: 6px 7px 22px 0px rgba(51,0,51,0.79);
+    -webkit-box-shadow: 6px 7px 22px 0px rgba(51,0,51,0.79);
+    -moz-box-shadow: 6px 7px 22px 0px rgba(51,0,51,0.79);
 }
 
 
@@ -226,3 +233,6 @@
         font-size: 1.1rem;
     }
   }
+
+
+
