--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,4 +1,110 @@
 .blog {
     padding: 2rem;
     padding-top: 6rem;
+    color:darkmagenta;
+}
+
+h1{
+    margin-top: 1rem;
+    font-size: 2rem;
+}
+
+.box-container{
+    background-image: url('../../assets/img4.jpg');
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+     margin-bottom: 1rem;
+     color : #fff;
+     font-size: 4rem;
+     font-family: cursive;
+    }
+
+.blogs-container{
+    padding-top: 0.75rem;
+} 
+
+.blog-title{
+    font-weight: bold !important;
+    font-family:cursive !important;
+    padding-bottom: 2rem;
+}
+
+.blog-card {
+    max-width: 100%;
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 45%) !important;
+    margin-bottom: 1.5rem;
+}
+
+
+.blog-icon{
+    margin-right: 0.75rem;
+}
+
+.img-container{
+    
+    height: 190px;
+}
+
+.card-actions{
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog-author{
+    display: flex;
+}
+
+.blog-card:hover, .card-actions:hover{
+    cursor: pointer ;
+    background-color: #e29ae2;
+}
+
+
+
+.blog-card:hover {
+    margin-top: -1rem;
+    transition: 0.8s;
+}
+
+ @media screen and (max-width: 800px){
+     .box-container{
+         height: 350px;
+     }
+
+     .blog-title{
+         font-size: 1.5rem !important;
+     }
+
+     .img-container{
+    
+        height: 160px;
+    }
+ }
+
+ @media screen and (max-width: 600px){
+    .box-container{
+        height: 300px;
+    }
+
+    .blog-title{
+        font-size: 1.5rem !important;
+    }
+
+}
+
+@media screen and (max-width: 400px){
+    .box-container{
+        height: 270px;
+    }
+
+    .blog-title{
+        font-size: 1.5rem !important;
+    }
+
 }
