--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,12 +1,6 @@
 .blog {
-    padding: 2rem;
-    padding-top: 6rem;
-    color:darkmagenta;
-}
-
-h1{
-    margin-top: 1rem;
-    font-size: 2rem;
+    padding-top: 0rem;
+    padding-bottom: 8rem;
 }
 
 .box-container{
@@ -39,6 +33,11 @@ h1{
     max-width: 100%;
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 45%) !important;
     margin-bottom: 1.5rem;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 
@@ -60,17 +59,17 @@ h1{
     display: flex;
 }
 
-.blog-card:hover, .card-actions:hover{
+/* .blog-card:hover, .card-actions:hover{
     cursor: pointer ;
     background-color: #e29ae2;
-}
+} */
 
 
 
-.blog-card:hover {
+/* .blog-card:hover {
     margin-top: -1rem;
     transition: 0.8s;
-}
+} */
 
  @media screen and (max-width: 800px){
      .box-container{
