--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@ footer {
     font-family: system-ui;
     background: #C0CBC0;
     text-align: center;
-  }
+}
   
   
   .site-footer {
@@ -33,8 +33,10 @@ footer {
   .site-footer .grid-container a {
       color: #ffb3ff;
       text-decoration: none;
-      font-size: 15px;
-      line-height: 16.25px;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 15.25px;
+      font-family: 'Lato', sans-serif;
   }
   
   .site-footer .grid-item {
@@ -53,7 +55,8 @@ footer {
   .site-footer .container hr { 
       display: block; 
       height: 1px;
-      border: 0; border-top: 1px solid #A2845C;
+      border: 0; 
+      border-top: 1px solid #ffb3ff;
       margin: 1px; 
       padding: 0; 
   }
@@ -63,14 +66,13 @@ footer {
     text-align: center;
     color: #ffb3ff;
     font-weight: 500;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   
   .site-footer .container .logo-img {
       width: 180px;
-      height: 150px;
-      cursor: pointer;
-      
+      height: 150px;      
   }
   
   .site-footer .grid-container .grid-icon .social-buttons {
@@ -85,25 +87,31 @@ footer {
   .site-footer .grid-container .grid-icon .social-buttons a {
       display: inline-flex;
       text-decoration: none;
-      font-size: 30px;
+      font-size: 28px;
       width: 30px;
-      height: 35px;
+      height: 30px;
       color: #1a001a;
       justify-content: center;
       align-items: center;
       position: relative;
-      margin: 0 4px;
-  }
+      background: #ffb3ff;
+      transition: 0.8s;
+      padding:12px;
+      border-radius: 100%;
+      margin: 20px;
+}
 
-  .grid-item{
-      margin-top: 0.5rem;
-      padding: 1rem !important;
-      justify-content: space-between !important;
-  }
-  
+.site-footer .grid-container .grid-icon .social-buttons a:hover {
+    color: #ffb3ff;
+    background: #1a001a;
+    transform: rotateY(180deg); 
+}
 
-
-  
+.grid-item{
+    margin-top: 0.5rem;
+    padding: 1rem !important;
+    justify-content: space-between !important;
+}  
   
   .site-footer .grid-container .grid-icon .social-buttons a i{
       transition: 0.3s ease-in;
@@ -116,44 +124,58 @@ footer {
       transform: scale(1.5);
   }
   
-  .circle-icon {
-      background: #ffb3ff;
-      padding:12px;
-      border-radius: 50%;
-      margin: 20px !important;
-      
-    }
-  
+
   
   
   /*------------------------------------------------------------------
   [ Screen Sizes] */
+  @media only screen and (max-width: 600px) {
+    .grid-one {
+        display: none;
+    }
+  }
+
   
   
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
-  
-      .site-footer {
-          height: 620px;
-          bottom: 0; 
-      }
-  
-      .site-footer .grid-container {
-          display: grid;
-          grid-template-columns: 400px;
-         
-          
-      }
-  
-      .site-footer .grid-container .inner-grid-container {
-          display: grid;
-          grid-template-columns: auto auto ;
-          text-align: left;
-         
-      }
-  
-  
+    .site-footer .container {
+        max-width: 100%;
+    }
+
+    .site-footer {
+        bottom: 0; 
+    }
+
+    .site-footer .grid-container {
+        display: grid;
+        grid-template-columns: 400px;   
+    }
+
+    .site-footer .grid-container .inner-grid-container {
+        display: grid;
+        grid-template-columns: auto auto ;
+        text-align: left;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }  
+    .site-footer .grid-container .grid-icon .social-buttons a {
+        font-size: 20px;
+        width: 20px;
+        height: 20px;
+        margin: 0 4px;
+    }
+    .circle-icon {
+        margin: 15px !important;
+    }
   }
+
+  @media screen and (max-width: 400px) {
+    .site-footer .grid-container {
+        display: grid;
+        grid-template-columns: auto;   
+    }
+}
   
   /*========================================================*/
   
@@ -161,7 +183,6 @@ footer {
   @media only screen and (min-width: 992px) {
   
       .site-footer {
-          height: 260px;
           bottom: 0;
       }
   
