--- a/src/components/FourNotFour/FourNotFour.css
+++ b/src/components/FourNotFour/FourNotFour.css
@@ -22,7 +22,7 @@
     padding: 0.6rem 1rem;
     border-radius: 10px;
     color: pink;
-    background-color: black;
+    background-color: #1a001a;
 }
 
 
