--- a/src/components/FourNotFour/FourNotFour.css
+++ b/src/components/FourNotFour/FourNotFour.css
@@ -1,25 +1,40 @@
-.fournotfour-container{
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
+
+.fournotfour{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: url('../../assets/svg/Cloudy.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
 
-.fournotfour-container > h1 {
+.fournotfour > h1 {
     font-size: 6rem;
+    font-family: 'Merienda', cursive;
+    letter-spacing: 12px;
+    text-align: center;
+    color: #330033;
+    margin-bottom: -2rem;
 }
 
 
-.fournotfour-container > p {
+.fournotfour > p {
     font-size: 2rem;
+    font-family: 'Poppins', cursive;
+    text-align: center;
+    color: #1a001a;
 }
 
-.fournotfour-container >a> button, .fournotfour-container >a> button:hover {
-    font-size: 1.2rem;
+.fournotfour > a > button, .fournotfour > a > button:hover {
+    font-size: 1rem;
     margin-top: 1.75rem;
-    padding: 0.6rem 1rem;
+    padding: 0.6rem 1.8rem;
     border-radius: 10px;
     color: pink;
     background-color: #1a001a;
@@ -27,8 +42,108 @@
 
 
 .fournotfour-image{
-    width: 380px;    
+    width: 480px;    
+    pointer-events: none;
 }
 
 
+.broom {
+    position: absolute;
+    width: 110px;
+    bottom: 0;
+    left: 0;
+    transform: rotate(22deg);
+    opacity: 0.8;
 
+    pointer-events: none;
+    -webkit-animation: diagonal 10s infinite;
+    -moz-animation: diagonal 10s infinite;
+    -o-animation: diagonal 10s infinite;
+    animation: diagonal 10s infinite;
+}
+
+
+@-webkit-keyframes diagonal {
+    0%       { transform: translatex(50px) translatey(-20px) }
+    50%      { transform: translatex(10px) translatey(10px); }
+    100%     { transform: translatex(50px) translatey(-20px) }
+  }
+  
+  @-moz-keyframes diagonal {
+    0%       { transform: translatex(50px) translatey(-20px) }
+    50%      { transform: translatex(10px) translatey(10px); }
+    100%     { transform: translatex(50px) translatey(-20px) }
+  }
+  
+  @-o-keyframes diagonal {
+    0%       { transform: translatex(50px) translatey(-20px) }
+    50%      { transform: translatex(10px) translatey(10px); }
+    100%     { transform: translatex(50px) translatey(-20px) }
+  }
+  
+  @keyframes diagonal {
+    0%       { transform: translatex(35vw) translatey(-35vh) }
+    50%      { transform: translatex(10px) translatey(10px); }
+    100%     { transform: translatex(35vw) translatey(-35vh) }
+  }
+
+
+
+
+
+
+@media screen and (max-width: 992px) {  
+    .fournotfour {
+        padding: 1rem;
+    }
+    .broom {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    .fournotfour-image{
+        width: 380px;    
+    }
+    
+    .fournotfour > h1 {
+        font-size: 4rem;
+    }
+    .fournotfour > p {
+        font-size: 1.7rem;
+        line-height: 110%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .fournotfour-image{
+        width: 320px;    
+    }
+    .fournotfour > a > button, .fournotfour > a > button:hover {
+        font-size: 0.75rem;
+        margin-top: 1.25rem;
+        padding: 0.6rem 1.2rem;
+    }
+    .fournotfour > p {
+        font-size: 1.35rem;
+        line-height: 110%;
+    }
+}
+  
+@media only screen and (min-device-width: 320px) and (max-device-width: 
+  480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
+    .fournotfour-image{
+        width: 320px;    
+    }
+
+    .fournotfour > a > button, .fournotfour > a > button:hover {
+        font-size: 0.75rem;
+        margin-top: 1.25rem;
+        padding: 0.6rem 1.2rem;
+    }
+    .fournotfour > p {
+        font-size: 1.35rem;
+        line-height: 110%;
+    }
+}
