--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
-
-
 .blog {
     padding-top: 0rem;
     padding-bottom: 8rem;
@@ -16,20 +13,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-     margin-bottom: 1rem;
-     color : #000010;
-     font-size: 4rem;
-     font-family: 'Libre Baskerville', serif;
-     position: relative;
+    margin-bottom: 4rem;
+    position: relative;
     }
 
 .box-title{
     position: absolute;
+    font-size: 5rem;
     top: 46%;
     left: 37%;
     -ms-transform: rotate(1.5deg);
     transform: rotate(1.5deg);
-    color: #262626;
+    color: #211e27;
+    font-family: 'HarryP-MVZ6w';
 }
 
 
@@ -90,26 +86,23 @@ a {
 } */
 
  @media screen and (max-width: 800px){
-     .box-container{
-         height: 350px;
-     }
-
-     .blog-title{
-         font-size: 1rem !important;
-     }
-
-     .img-container{
-    
-        height: 160px;
+    .box-container{
+        height: 350px;
+        margin-bottom: 2rem;
     }
 
-    
+    .blog-title{
+        font-size: 1rem !important;
+    }
 
+    .img-container{
+        height: 160px;
+    }
    .box-title {
-    position: absolute;
-    top: 44%;
-    left: 28%;
-    font-size: 3rem;
+        position: absolute;
+        top: 44%;
+        left: 28%;
+        font-size: 3rem;
     }
  }
 
