--- a/src/components/FourNotFour/FourNotFour.css
+++ b/src/components/FourNotFour/FourNotFour.css
@@ -25,8 +25,8 @@
 
 
 .fournotfour > p {
-    font-size: 2rem;
-    font-family: 'Poppins', cursive;
+    font-size: 3.5rem;
+    font-family: 'HarryP-MVZ6w';
     text-align: center;
     color: #1a001a;
 }
@@ -88,15 +88,22 @@
   }
 
 
+.dh {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 2rem;
+    opacity: 0.9;
+}
 
 
 
 
 @media screen and (max-width: 992px) {  
     .fournotfour {
-        padding: 1rem;
+        padding: 0rem 1rem;
     }
-    .broom {
+    .broom, .dh {
         display: none;
     }
 }
@@ -111,7 +118,7 @@
         font-size: 4rem;
     }
     .fournotfour > p {
-        font-size: 1.7rem;
+        font-size: 2.7rem;
         line-height: 110%;
     }
 }
@@ -126,7 +133,7 @@
         padding: 0.6rem 1.2rem;
     }
     .fournotfour > p {
-        font-size: 1.35rem;
+        font-size: 2.35rem;
         line-height: 110%;
     }
 }
@@ -143,7 +150,7 @@
         padding: 0.6rem 1.2rem;
     }
     .fournotfour > p {
-        font-size: 1.35rem;
+        font-size: 2.35rem;
         line-height: 110%;
     }
 }
