--- a/src/components/About/Education/EduCard/EduCard.css
+++ b/src/components/About/Education/EduCard/EduCard.css
@@ -7,6 +7,11 @@
     padding: 1rem;
     border-radius: 5px;
     margin-bottom: 2rem;
+    transition: 0.9s;
+}
+
+.eduCard:hover {
+    background-color: #efccff;
 }
 
 .eduCardIcon {
