--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -85,6 +85,82 @@ a {
     transition: 0.8s;
 } */
 
+.blog-search {
+    margin-bottom: 4rem;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.searchInput {
+    width: 800px;
+}
+
+.searchClose {
+    cursor: pointer;
+    color: #800080 !important;
+}
+
+.spin {
+    -webkit-transform: rotate(180deg);
+    -webkit-transition-duration: 1s;
+    -webkit-transition-delay: now;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+  }
+  
+  @-webkit-keyframes spin /* Safari and Chrome */ {
+    from {
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(180deg);
+      -o-transform: rotate(180deg);
+      transform: rotate(180deg);
+    }
+  }
+  @keyframes spin {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(180deg);
+      -moz-transform: rotate(180deg);
+      -webkit-transform: rotate(180deg);
+      -o-transform: rotate(180deg);
+      transform: rotate(180deg);
+    }
+  }
+  .spin:hover {
+    -webkit-animation: spin .4s linear;
+    -moz-animation: spin .4s linear;
+    -ms-animation: spin .4s linear;
+    -o-animation: spin .4s linear;
+    animation: spin .4s linear;
+  }
+
+
+@media (min-width: 992px) and (max-width: 1380px) {
+    .searchInput {
+        width: 600px;
+    }
+    
+}
+
+
+@media screen and (max-width: 992px) {
+    .searchInput {
+        width: 360px;
+    }
+}
+
  @media screen and (max-width: 800px){
     .box-container{
         height: 350px;
@@ -126,6 +202,10 @@ a {
         font-size: 1.5rem !important;
     }
 
+    .searchInput {
+        width: 320px;
+    }
+
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 
@@ -135,6 +215,9 @@ a {
         top: 44%;
         left: 21%;
         font-size: 2.75rem;
+    }
+    .searchInput {
+        width: 260px;
     }
 }
 
