--- a/src/components/About/Skills/SkillCard/SkillCard.css
+++ b/src/components/About/Skills/SkillCard/SkillCard.css
@@ -15,6 +15,7 @@
 .skillCard > h2 {
     margin-bottom: 2rem;
     font-family: 'Roboto', sans-serif;
+    color: #1a001a;
 }
 
 .sk_circle {
@@ -33,7 +34,7 @@
 .skill_icon {
     margin-top: 1.4rem;
     font-size: 1.85rem;
-    color: rgba(0, 0, 0, 0.9);
+    color: #1a001a;
 }
 
 
