--- a/src/components/About/Skills/SkillProgress/SkillProgress.css
+++ b/src/components/About/Skills/SkillProgress/SkillProgress.css
@@ -6,6 +6,7 @@
 .skillProgress > h3 {
     margin-bottom: 0.5rem;
     font-family: 'Roboto', sans-serif;
+    color: #1a001a;
 }
 
 .MuiLinearProgress-barColorPrimary {
@@ -22,6 +23,7 @@
     font-size: 1.3rem !important;
     font-weight: 800 !important;
     margin-left: 1rem !important;
+    color: #1a001a !important;
 }
 
 
