--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -168,6 +168,11 @@ footer {
     }
     .circle-icon {
         margin: 15px !important;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -o-user-select: none;
+        user-select: none;
     }
   }
 
