--- a/src/components/Services/Testimonials/Testimonials.css
+++ b/src/components/Services/Testimonials/Testimonials.css
@@ -49,6 +49,11 @@
     border-radius: 100%;
     padding: 0.5rem;
     cursor: pointer;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .left-arrow:hover, .right-arrow:hover {
@@ -99,21 +104,24 @@
     text-align: center;
     word-spacing: 1px;
     margin-bottom: 2rem;
-    font-size: 1.15rem;
+    font-size: 1.125rem;
+    font-weight: 500;
+    color: #1a001a;
 }
 
 .slider > h3 {
     font-family: 'Poppins', sans-serif;
     text-align: center;
     word-spacing: 3px;
+    color: #1a001a;
 }
 
 .slider > p {
     font-family: 'Poppins', sans-serif;
     text-align: center;
     margin-top: 0.25rem;
-    opacity: 0.8;
     font-weight: 800;
+    color: rgba(0 0 0 / 80%);
 }
 
 .sliderImg {
