--- a/src/components/Home/Landing/Landing.css
+++ b/src/components/Home/Landing/Landing.css
@@ -1,7 +1,7 @@
 .landing {
     height: 100vh;
     overflow: hidden;
-    background-image: url('../../../assets/bg.jpg');
+    background-image: url('../../../assets/bgtemp.png');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -9,19 +9,64 @@
     background-color: black;
     position: relative;
     user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing_container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 3rem;
+    padding-top: 7rem;
+    padding-bottom: 0;
 }
 
 .landing_text {
-    position: absolute;
-    top: 50%;
-    left: 30%;
-    width: 50%;
+    flex: 0.6;
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .landing_text > h1 {
-    color: wheat;
-    font-size: 4rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #ffe6ff;
+    font-size: 2.5rem;
+    font-family: 'Lato', sans-serif;
+}
+
+.landing_text > button, .landing_text > button:hover {
+    margin-top: 5rem;
+    color: #ffe6ff;
+    text-transform: inherit;
+    padding: 1rem 2rem;
+    background-color: #800080;
+    border-radius: 34px;
+    box-shadow: 4px 8px 34px -5px rgb(51 0 51 / 79%);
+    -webkit-box-shadow: 4px 8px 34px -5px rgb(51 0 51 / 79%);
+    -moz-box-shadow: 4px 8px 34px -5px rgba(51,0,51,0.79);
+}
+
+
+.landing_img {
+    background: pink;
+    height: 500px;
+    flex: 0.4;
+    border-radius: 10%;
+}
+
+.landing_img > img {
+    height: 500px;
+    overflow: hidden;
+    -webkit-filter: grayscale(10%);
+    filter: grayscale(10%);
+    opacity: .9;
+    pointer-events: none;
+    width: 100%;
+    border-radius: 10%;
 }
 
 .fadeIn {
@@ -58,87 +103,88 @@
 
 
 @media (min-width: 992px) and (max-width: 1380px) {
-    .landing_text {
-        position: absolute;
-        left: 20%;
-        width: 60%;
+    .landing_container {
+        padding: 3rem;
+        padding-top: 5rem;
+        padding-bottom: 0;
     }
     .landing_text > h1 {
-        font-size: 3.45rem;
+        font-size: 2.2rem;
     }
 }
 
 
 @media screen and (max-width: 992px) {
-    .landing_text {
-        position: absolute;
-        left: 10%;
-        top: 70%;
-        width: 70%;
-    }
     .landing_text > h1 {
-        font-size: 2.45rem;
+        font-size: 2.15rem;
+    }
+    .landing_container {
+        padding: 2rem;
+        padding-top: 2rem;
+    }
+    .landing_text {
+        margin: 2rem;
     }
 }
 
 @media screen and (max-width: 800px) {
     .landing {
-        background-image: url('../../../assets/bg-mob.PNG');
+        background-image: url('../../../assets/img1.jpeg');
+        align-items: flex-end;
     }
+    .landing_container {
+        padding: 1rem;
+        padding-bottom: 3rem;
+    }  
     .landing_text {
-        position: absolute;
-        left: 5%;
-        top: 50%;
-        width: 100%;
+        margin: 0.5rem;
+        flex: 1;
     }
     .landing_text > h1 {
         font-size: 1.95rem;
         margin: 1rem;
     }
+    .landing_text > button, .landing_text > button:hover {
+        margin-top: 2.5rem;
+        color: #ffe6ff;
+        text-transform: inherit;
+        padding: 1rem 2rem;
+    }
+    .landing_img {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 600px) {
-
+    .landing_text > button, .landing_text > button:hover {
+        margin-top: 1.5rem;
+        color: #ffe6ff;
+        text-transform: inherit;
+        padding: 0.8rem 1.8rem;
+    }
+    .landing_text > h1 {
+        font-size: 1.45rem;
+        margin: 1.2rem;
+    }
 }
 
 @media screen and (max-width: 400px) {
-    .landing_text {
-        position: absolute;
-        left: 5%;
-        top: 50%;
-        width: 100%;
-    }
     .landing_text > h1 {
-        font-size: 1.55rem;
-        margin: 1rem;
+        font-size: 1.25rem;
+        margin: 0.2rem;
     }
 }
   
 @media only screen and (min-device-width: 320px) and (max-device-width: 
   480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
-    .landing_text {
-        position: absolute;
-        left: 5%;
-        top: 50%;
-        width: 100%;
-    }
     .landing_text > h1 {
-        font-size: 1.55rem;
-        margin: 1rem;
+        font-size: 1.25rem;
+        margin: 0.2rem;
     }
 
 }
 
 
 @media only screen and (device-width: 768px) {
-    .landing_text {
-        position: absolute;
-        left: 5%;
-        top: 60%;
-        width: 100%;
-    }
-    .landing_text > h1 {
-        font-size: 2.55rem;
-        margin: 1rem;
-    }
+
 }
