--- a/src/components/Services/Testimonials/Testimonials.css
+++ b/src/components/Services/Testimonials/Testimonials.css
@@ -39,6 +39,11 @@
     position: absolute;
     right: 20%;
     top: 10px;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .left-arrow, .right-arrow {
