--- a/src/components/Snippets/Snippets.css
+++ b/src/components/Snippets/Snippets.css
@@ -22,14 +22,17 @@
     -webkit-backdrop-filter: blur( 4.0px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     transition: 0.5s;
+    width: 50px;
+    height: 50px;
 }
+
 
 .snippetContainer:hover {
-    box-shadow: 2px 2px 4px #111111dd;
+    box-shadow: 3px 3px 5px #111111dd;
 }
 
-.snippetContainer > span > img {
-    width: 50px;
+.snippetContainer > img {
+    width: 48px;
     cursor: pointer;
     pointer-events: none;
     z-index: 999;
